# api/routers/commentsRouter_controllers.go
@@ -7,128 +7,20 @@ import (
 
 func init() {
 
-    beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"] = append(beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"],
+    beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:DbController"] = append(beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:DbController"],
         beego.ControllerComments{
-            Method: "PostCommon",
-            Router: `/common`,
+            Method: "Exec",
+            Router: `/exec`,
             AllowHTTPMethods: []string{"post"},
             MethodParams: param.Make(),
             Filters: nil,
             Params: nil})
 
-    beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"] = append(beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"],
+    beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:DbController"] = append(beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:DbController"],
         beego.ControllerComments{
-            Method: "GetCommonAll",
-            Router: `/common/:nname`,
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"] = append(beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"],
-        beego.ControllerComments{
-            Method: "PutCommon",
-            Router: `/common/:uid`,
-            AllowHTTPMethods: []string{"put"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"] = append(beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"],
-        beego.ControllerComments{
-            Method: "DeleteCommon",
-            Router: `/common/:uid`,
-            AllowHTTPMethods: []string{"delete"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"] = append(beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"],
-        beego.ControllerComments{
-            Method: "DistinctNote",
-            Router: `/distinct/:gname`,
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"] = append(beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"],
-        beego.ControllerComments{
-            Method: "GetGroupAll",
-            Router: `/group`,
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"] = append(beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"],
-        beego.ControllerComments{
-            Method: "PostGroup",
-            Router: `/group`,
+            Method: "Select",
+            Router: `/select`,
             AllowHTTPMethods: []string{"post"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"] = append(beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"],
-        beego.ControllerComments{
-            Method: "GetGroupAllSecond",
-            Router: `/group/:gname`,
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"] = append(beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"],
-        beego.ControllerComments{
-            Method: "PutGroup",
-            Router: `/group/:uid`,
-            AllowHTTPMethods: []string{"put"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"] = append(beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"],
-        beego.ControllerComments{
-            Method: "DeleteGroup",
-            Router: `/group/:uid`,
-            AllowHTTPMethods: []string{"delete"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"] = append(beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"],
-        beego.ControllerComments{
-            Method: "PostNote",
-            Router: `/note`,
-            AllowHTTPMethods: []string{"post"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"] = append(beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"],
-        beego.ControllerComments{
-            Method: "GetNoteAll",
-            Router: `/note/:gname`,
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"] = append(beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"],
-        beego.ControllerComments{
-            Method: "PutNote",
-            Router: `/note/:uid`,
-            AllowHTTPMethods: []string{"put"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"] = append(beego.GlobalControllerRouter["github.com/lflxp/showme/api/controllers:NoteController"],
-        beego.ControllerComments{
-            Method: "DeleteNote",
-            Router: `/note/:uid`,
-            AllowHTTPMethods: []string{"delete"},
             MethodParams: param.Make(),
             Filters: nil,
             Params: nil})
